# flask-ladder-mgmt

./: .env.template  .gitignore  README.md  celery_app.py  docker-compose.yaml  pyproject.toml  register.html  requirements.txt
configs/grafana/: grafana.ini
configs/prom/: prometheus.yml
src/: __init__.py  config.py  contants.py  logger.py  manager.py  route_manager.py
src/dto/: role_dto.py  server_dto.py  user_dto.py
src/extensions/: admin.py  blueprints.py  cache.py  celery.py  db.py  login.py  mail.py  redis.py  security.py
src/forms/: auth_form.py  registration_form.py  signup_form.py
src/models/: role.py  server.py  server_status.py  user.py  user_roles.py  verification_code.py  verification_codes.py
src/services/: server_service.py  user_service.py
src/static/css/: style.css
src/static/js/: script.js
src/tasks/: __init__.py  mail_tasks.py
src/templates/: 403.html  404.html  base.html  modal.html
src/templates/admin/: base.html  dashboard.html  index.html  servers copy.html  users.html
src/templates/auth/: base.html  forgot.html  login.html  register.html  register_finish.html  signup.html  signup_finish.html  verification.html  welcome.html
src/templates/mail/: verification.html  verification.txt
src/templates/security/: _macros.html  base.html  forgot_password.html  login_user.html  register_user.html  reset_password.html
src/templates/user/: dashboard.html
src/utils/: celery.py  db.py  mail.py  redis.py
src/views/: admin.py  auth.py  contants.py  user.py
src/views/admin/: dashboard.py  index.py  server.py  user.py
src/views/user/: auth.py
tests/: test_db.py
