[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ladder_dashboard"
version = "0.1.0"
description = "ladder and user management dashboard"
readme = "README.md"
authors = [{name = "Xiaohong", email = "xiaohong@pandas.run"}]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
dependencies = [
    "Jinja2==3.1.5",
    "Werkzeug==3.1.3",
    "Flask==3.1.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Login==0.6.3",
    "Flask-WTF==1.2.2",
    "Flask-Admin==1.6.1",
    "Flask-Security-Too==5.6.0",
    "Flask-Caching==2.3.0",
    "Flask-Mailman==1.1.1",
    "Flask-Session==0.8.0",
    "SQLAlchemy==2.0.38",
    "email-validator==2.2.0",
    "psycopg2-binary==2.9.10",
    "confluent-kafka==2.8.0",
    "celery==5.4.0",
    "redis==5.2.1",
    "kombu==5.4.2",
    "ansible==11.2.0",
    "WTForms==3.1.1",
    "setuptools==75.8.0",
    "wheel==0.45.1",
    "itsdangerous==2.2.0",
    "python-dotenv==1.0.1"
]

[project.optional-dependencies]
dev = [
    "ruff==0.9.6",
    "ipython==8.17.2",
    "ipdb"
]
test = [
    "pytest==8.3.4",
    "coverage==7.3.2"
]
prod = [
    "gunicorn==23.0.0"
]
docs = ["sphinx"]

[tool.pytest]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100
ignore = ["E115"]
